--- a/app/src/main/res/layout/event_item_model.xml
+++ b/app/src/main/res/layout/event_item_model.xml
@@ -85,6 +85,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                app:tint="@color/purple"
                 android:id="@+id/calendar"
                 android:layout_width="18dp"
                 android:layout_height="12dp"
@@ -95,6 +96,7 @@
                 app:srcCompat="@drawable/baseline_calendar_today_24" />
 
             <ImageView
+                app:tint="@color/purple"
                 android:id="@+id/clock"
                 android:layout_width="17dp"
                 android:layout_height="14dp"
@@ -105,6 +107,7 @@
                 app:srcCompat="@drawable/baseline_access_time_24" />
 
             <ImageView
+                app:tint="@color/purple"
                 android:id="@+id/eventLocationTextView"
                 android:layout_width="18dp"
                 android:layout_height="15dp"
