drop down changed

--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -122,30 +122,18 @@
             android:textSize="8sp"
             app:layout_constraintStart_toStartOf="@+id/purple_line"
             app:layout_constraintTop_toBottomOf="@+id/tags" />
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/chipGroup"
+
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="300dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@android:drawable/editbox_background"
             app:layout_constraintStart_toStartOf="@+id/purple_line"
             app:layout_constraintTop_toBottomOf="@+id/tag_choose"
+            android:drawablePadding="16dp"
             android:hint="Select Tags"
-
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
-
-            <MultiAutoCompleteTextView
-                android:id="@+id/multiAutoCompleteTextView"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="Select Tags"
-                android:inputType="textMultiLine" />
-    <!--        <com.google.android.material.chip.ChipGroup-->
-
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_marginTop="8dp"-->
-    <!--            app:singleLine="false" />-->
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:padding="12dp" />
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
