--- a/app/src/main/res/drawable/tag_rectangle.xml
+++ b/app/src/main/res/drawable/tag_rectangle.xml
@@ -2,13 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape = "rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/light_grey" />
             <corners android:radius="26dp" />
             <stroke
-                android:width="0.2dp"
-                android:color="#967ADC" />
-
-
+                android:width="0.5dp"
+                android:color="@color/grey" />
         </shape>
     </item>
 
