--- a/app/src/main/res/layout/event_page_remake.xml
+++ b/app/src/main/res/layout/event_page_remake.xml
@@ -41,7 +41,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="350dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/eventNameTextView"
@@ -152,7 +153,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/event_tag_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/tagsHeaderTextView"
                     tools:layout_editor_absoluteX="0dp" />
@@ -171,11 +172,10 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/organiserCardView"
                     android:layout_width="wrap_content"
-                    android:layout_height="70dp"
-                    app:cardBackgroundColor="#F7FAFA"
+                    android:layout_height="75dp"
+                    android:layout_marginTop="13dp"
+                    app:cardBackgroundColor="#EFEFF1"
                     app:cardCornerRadius="10dp"
-                    app:cardElevation="7dp"
-                    android:layout_marginTop="10dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/organiserHeaderTextView">
 
@@ -187,6 +187,7 @@
                             android:id="@+id/organiserPictureImageView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="6dp"
                             android:paddingStart="10dp"
                             android:src="@drawable/root"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -195,19 +196,21 @@
 
                         <TextView
                             android:id="@+id/organiserNameTextView"
-                            android:layout_width="232dp"
-                            android:layout_height="42dp"
-                            android:layout_marginTop="12dp"
-                            android:paddingStart="10dp"
-                            android:paddingTop="15dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginEnd="15dp"
                             android:text="@string/org_name"
-                            android:textColor="#000000"
                             android:textSize="16sp"
                             android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toEndOf="@+id/organiserPictureImageView"
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
