--- a/app/src/main/res/layout/event_page_remake.xml
+++ b/app/src/main/res/layout/event_page_remake.xml
@@ -153,7 +153,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/event_tag_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/tagsHeaderTextView"
                     tools:layout_editor_absoluteX="0dp" />
@@ -189,7 +189,7 @@
                             android:layout_height="70dp"
                             android:layout_marginStart="6dp"
                             android:paddingStart="10dp"
-                            android:src="@drawable/root"
+                            android:src="@drawable/baseline_account_circle_24"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -201,7 +201,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="15dp"
                             android:layout_marginEnd="15dp"
-                            android:text="@string/org_name"
+                            android:text="fetching organiser's info"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
