--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -314,6 +314,7 @@
             android:layout_height="100dp"
             android:background="@drawable/text_box"
             android:hint=""
+            android:autoLink="web"
             android:inputType="textMultiLine"
             android:paddingStart="10dp"
             android:textColor="#000000"
