--- a/app/src/main/res/drawable/field_light.xml
+++ b/app/src/main/res/drawable/field_light.xml
@@ -4,4 +4,5 @@
     <corners android:radius="8dp" />
     <stroke android:color="#E7E8EB"
         android:width="2dp"/>
+    <solid android:color="@color/white"/>
 </shape>
