--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -60,7 +60,8 @@
             android:id="@+id/placeHolder"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:src="@drawable/spinner_background"
+            android:layout_marginTop="8dp"
+            style="@style/InputField"
             app:layout_constraintEnd_toEndOf="@+id/purple_line"
             android:paddingTop="10dp"
             app:layout_constraintStart_toStartOf="@+id/add_your_event_poster_here"
@@ -70,11 +71,11 @@
             android:id="@+id/middle_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="60dp"
             android:src="@drawable/placeholder_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_your_event_poster_here" />
+            app:layout_constraintBottom_toBottomOf="@+id/placeHolder"
+            app:layout_constraintEnd_toEndOf="@+id/placeHolder"
+            app:layout_constraintStart_toStartOf="@+id/placeHolder"
+            app:layout_constraintTop_toTopOf="@+id/placeHolder" />
 
         <TextView
             android:id="@+id/Event_Name"
@@ -93,7 +94,7 @@
             android:id="@+id/editTextValue"
             android:layout_width="300dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:hint="Enter the name of event"
             android:inputType="text"
             android:paddingStart="10dp"
@@ -129,7 +130,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:drawablePadding="16dp"
             android:hint="Select Tags"
             android:padding="12dp"
@@ -152,7 +153,7 @@
             android:id="@+id/editTextDate"
             android:layout_width="140dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:focusable="false"
             android:hint="Select Date"
             android:paddingStart="10dp"
@@ -178,7 +179,7 @@
             android:id="@+id/editTextTime"
             android:layout_width="140dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:focusable="false"
             android:hint="Select Time"
             android:paddingStart="10dp"
@@ -205,7 +206,7 @@
             android:id="@+id/editTextDate2"
             android:layout_width="140dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:focusable="false"
             android:hint="Select Date"
             android:paddingStart="10dp"
@@ -231,7 +232,7 @@
             android:id="@+id/editTextTime2"
             android:layout_width="140dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:focusable="false"
             android:hint="Select Time"
             android:paddingStart="10dp"
@@ -258,7 +259,7 @@
             android:id="@+id/location_text"
             android:layout_width="300dp"
             android:layout_height="30dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:hint="Enter the name of event"
             android:inputType="text"
             android:paddingStart="10dp"
@@ -282,7 +283,7 @@
 
         <Spinner
             android:id="@+id/spinner"
-            style="@style/CreateAccountFields"
+            style="@style/InputField"
             android:layout_width="300dp"
             android:layout_height="100dp"
             android:layout_marginTop="4dp"
@@ -309,7 +310,7 @@
             android:id="@+id/description_text"
             android:layout_width="300dp"
             android:layout_height="100dp"
-            android:background="@drawable/text_box"
+            style="@style/InputField"
             android:inputType="textMultiLine"
             android:paddingStart="10dp"
             android:textColor="#000000"
