--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -32,7 +32,7 @@
     <style name="LogInFields"><item name="android:background">@drawable/grey_rectangle_night</item> </style>
     <style name="Submit"><item name="android:background">@drawable/purple_rectangle_night</item></style>
     <style name="CreateAccountHeading"><item name="android:textColor">@color/purple</item></style>
-    <style name="CreateAccountFields"><item name="android:background">@drawable/field_night</item></style>
+    <style name="InputField"><item name="android:background">@drawable/field_night</item></style>
 
     <!-- Styles for Event Fragment -->
     <style name="EventTitle"><item name="android:textColor">@color/white</item></style>
