--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,7 +44,7 @@
     <style name="LogInFields"><item name="android:background">@drawable/grey_rectangle</item> </style>
     <style name="Submit"><item name="android:background">@drawable/purple_rectangle</item></style>
     <style name="CreateAccountHeading"><item name="android:textColor">@color/dark_purple</item></style>
-    <style name="CreateAccountFields"><item name="android:background">@drawable/field_light</item></style>
+    <style name="InputField"><item name="android:background">@drawable/field_light</item></style>
 
     <!-- Styles for Event Fragment -->
     <style name="EventTitle">
